# RealTripAssistant

./: .gitignore  README.md  _fix_intake.py  pyproject.toml  test_enc.py
docs/: README.md
docs/01-architecture/: architecture-overview.md  decoupling-refactor-proposal-2026-05-19.md
docs/02-implementation/: phase-01-mvp.md  phase-02-reliable.md  phase-03-product.md  phase-04-enterprise.md
docs/03-product-docs/: features.md  introduction.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
tests/: conftest.py  test_agent_protocol.py  test_chat_api.py  test_chat_revision.py  test_chat_revision_service.py  test_chat_service.py  test_context_ledger.py  test_diff.py  test_execution_plan.py  test_intake.py  test_personal_api.py  test_personalization.py  test_pin.py  test_plan_schema.py  test_poi_parser.py  test_product_runtime.py  test_rag_api.py  test_react_loop.py  test_repair_plan.py  test_researcher_execution_plan.py  test_researcher_react.py  test_revision_append.py  test_revision_intent_classifier.py  test_revision_scope_parser.py  test_revision_strategy.py  test_route_parser.py  test_rules.py  test_session_resume.py  test_session_resume_core.py  test_supervisor.py  test_tool_dedup.py  test_tool_dedup_resume.py  test_tracing.py  test_weather_parser.py
travel_planning_agent/: config.py  flight_client.py  gaode_client.py  llm.py  main.py  prompts.py  tool_runtime.py  train_client.py  tuniu_client.py  types.py  utils.py
travel_planning_agent/agent/: base.py  context.py  intake.py  planner.py  polisher.py  revision.py  (+3 more)
(+100 files in other folders)
