
[project]
name = "travel-planning-agent"
version = "0.3.0"
description = "RealTrip Assistant - 非交易型智能旅行规划助手 (Phase 3, 产品阶段)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # RAG 模块
    "elasticsearch>=8.15.0,<9.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
travel-plan = "travel_planning_agent.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["travel_planning_agent"]

[tool.setuptools.packages.find]
namespaces = false

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
